--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-typical": "^0.1.3",
     "tailwind-scrollbar-hide": "^1.1.6"
   },
   "devDependencies": {
